[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Utils/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/bullet.gd" type="Script" id=2]

[node name="bullet" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 1 )]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
